<resources>
    <string name="app_name">HermesCelascoLus</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_therapist_mode">Modo terapeuta</string>
    <string name="action_kid_mode">Modo alumno</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="gender">Sexo</string>
    <string name="female">Femenino</string>
    <string name="male">Masculino</string>
    <string name="add">Agregar</string>
    <string name="first_name_required_msg">Falta el nombre</string>
    <string name="last_name_required_msg">Falta el apellido</string>
    <string name="pictograms_size">Tamaño de pictogramas</string>
    <string name="enable_categories">Habilitar categorías</string>
    <string name="delete_kid">Eliminar alumno</string>
    <string name="kid">Alumn@</string>
    <string name="general_settings">Configuración general</string>
    <string name="monitor_ip_address">Dirección IP del monitor</string>
    <string name="monitor_port">Puerto del monitor</string>
    <string name="save">Guardar cambios</string>
    <string name="ip_required_msg">Falta la dirección IP</string>
    <string name="port_required_msg">Falta el puerto</string>
    <string name="ip_invalid">Dirección IP inválida</string>
    <string name="port_invalid">Puerto inválido</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="students">ALUMN@S</string>
    <string name="cedica_logo">Logo de Cedica</string>
    <string name="monitor_fail_error_msg">
        No se pudo enviar la notificación.
        Compruebe que el monitor este corriendo y que la dirección IP y puerto sean las correctas.
        La notificación será encolada para su posterior envío.
        Si no quiere volver a ver este mensaje deshabilite la opción "Mostrar errores del monitor"
        en el panel de Ajustes.
    </string>
    <string name="network_fail_error_msg">
        No se pudo enviar la notificación.
        Compruebe su acceso a la red.
        La notificación será encolada para su posterior envío.
        Si no quiere volver a ver este mensaje deshabilite la opción "Mostrar errores del monitor"
        en el panel de Ajustes.
    </string>
    <string name="show_network_errors">Mostrar errores del monitor</string>
    <string name="small">Chico</string>
    <string name="medium">Mediano</string>
    <string name="large">Grande</string>
    <string name="delete_kid_msg">¿Está seguro que desea eliminar a %s?</string>
</resources>
