<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/first_name_input"
            android:hint="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/last_name_input"
            android:hint="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        style="@style/H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"/>
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/gender_input"
        style="Widget.AppCompat.Spinner"
        android:prompt="@string/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.AppCompatSpinner>
</merge>